Feb 01 2003  2.9.1  Merged patch from Pedro to fix memory faults on some BSDs.
Jan 31 2003  2.9.1  Merged new patch from Anton for power-level scatter plots.
Jan 27 2003  2.9.1  Merged patch for gpsmap power-level scatter plots
Jan 26 2003  2.9.1  Started 2.9.1 devel cycle

Jan 26 2003  2.8.1  Released 2.8.1 with bugfixes and updates, including:
                     802.11a support
                     XML Updates
                     GPSMap updates
                     Speech/Sound updates
                     Speech shellcode security updates

Jan 26 2003  2.9.0  Updated manufacturer files with latest unbolted.net info
Jan 22 2003  2.9.0  Hopefully nipped speech/sound doubling bug.
                    Happy linux world!
                    Added ability to show string dumps from tagged networks
                     only
                    Fixed packet type to work with multiple clients
                    Added ability to show packet types from tagged networks
                     only
Jan 19 2003  2.9.0  Added support for 802.11a (152-bit) WEP
Jan 16 2003  2.9.0  Updated expat.cc to handle the 'carrier' attribute
Jan 15 2003  2.9.0  Fixed up netxml more
                    Added logging of client maxrate to netxml
                    Merged GPSMap patch from Anton Rager to do power level
                     coloring for scatter plots (-a -q#).
                    Fixed multiserver support for string dumps, fixed string
                     dump scrolling, added timestamping to string dumps.
                    Fixed 'x' and 'X' not closing some panel windows.
Jan 11 2003  2.9.0  Cleaned up MungeToShell to be more restrictive for passing
                     text to Festival.
                    Merged metric display patch from Peter Sturm
Jan 10 2003  2.9.0  Added carrier to network and netxml
Jan 07 2003  2.9.0  Added support for 802.11a (ar5k cardtype, via Reyk Floeters
                     drivers at http://team.vantronix.net/ar5k/.  Make sure you