@@ -12,6 +12,8 @@ modify it to suit your hardware and preferences.
 .SH CONFIGURATION FILE FORMAT
 All entries are of the format directive = value
 .SH CONFIGURATION VALUES
+"include" (string) Include another config file.
+.PP
 "servername" (string) Name of this Kismet server.  This is purely for information in
 multiple server systems.
 .PP
