@@ -9,7 +9,10 @@ The kismet_ui.conf file controls settings specific to the user interface.
 All entries are of the format directive = value
 .SH CONFIGURATION VALUES
 In addition to these configuration options exclusive to the UI, the UI
-can also be configured for speech, sound, 
+can also be configured for speech and sound.
+.PP
+"include" (string) Include another config file.
+.PP
 "gui" (string) Type of GUI to launch (curses or panel)
 .PP
 "host" (string) Host:port to connect to for UI data
